--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "engines": { "node": "5.5.0" },
   "dependencies": {
+    "getconfig": "2.1.0",
+    "socket.io": "1.4.5",
     "crypto-js": "^3.1.5",
     "moment": "^2.10.6",
     "mongodb": "^2.0.47",
@@ -15,6 +17,7 @@
     "underscore": "^1.8.3",
     "aws-sdk": "2.2.19",
     "twilio": "^2.6.0",
-    "cron": "^1.1.0"
+    "cron": "^1.1.0",
+    "yetify": "0.1.0"
   }
 }
